# unitcellax

./: .gitignore  CLAUDE.md  Dockerfile  GITHUB_ACTIONS_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: README.md  docs.yml  matrix-test.yml  pr-test.yml  test.yml
examples/: elasticity_topopt.py  homogenization_elasticity.py  multiload_topopt.py
tests/: conftest.py  test_basis.py  test_environment.py  test_filters_minimal.py  test_filters_simple.py  test_optimizers.py  test_pbc.py  test_unitcell.py
unitcellax/: __init__.py  filters.py  graph.py  optimizers.py  pbc.py  physics.py  unitcell.py  utils.py  warnings_config.py
unitcellax/fem/: README.md  __init__.py  basis.py  fe.py  generate_mesh.py  logger_setup.py  mesh.py  mma.py  problem.py  solver.py  utils.py
