[metadata]
name = unitcellax
version = 0.0.1
description = A GPU-accelerated numerical material testing framework with JAX.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Naruki-Ichihara
author_email = ichihara.naruki@nihon-u.ac.jp
classifiers =
    Development Status :: 1 - Alpha
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
[options]
zip_safe = False
packages = find:
install_requires =
  numpy==1.26.0
  scipy
  matplotlib
  meshio
  petsc4py
  gmsh
  nlopt
